# libnss-rightscale

./: .gitignore  .travis.yml  INSTALL  Makefile.am  README  README.md  config.h.in  configure.ac  group.c  nss-rightscale.h  nss-socket.h  passwd.c  shadow.c  test.c  utils.c  utils.h
debian/: README  README.Debian  changelog  control  copyright  rules
scripts/: RL10_Compile_and_Install_NSS.sh  RL10_Test_and_Compile_NSS.sh  sample_policy  test_sample_policy.rb
